# system-design-url-shortener

./: README.md
url-shortener/: .gitignore  DRAWBACKS.md  README.md  docker-compose.yml
url-shortener/nginx/: nginx.conf
url-shortener/read-service/: Dockerfile  main.py  pyproject.toml  settings.py  storage.py
url-shortener/read-service/routers/: urls.py
url-shortener/read-service/schemas/: __init__.py  url.py
url-shortener/write-service/: alembic.ini  main.py  pyproject.toml  settings.py  storage.py
url-shortener/write-service/alembic/: env.py
url-shortener/write-service/alembic/versions/: e6e9ca37c4b0_create_users_and_urls_tables.py
url-shortener/write-service/models/: __init__.py  url.py  user.py
url-shortener/write-service/routers/: urls.py  users.py
url-shortener/write-service/schemas/: __init__.py  url.py  user.py
url-shortener/write-service/services/: sqids.py
